# libwave

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.md~  index.html  package.xml
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md  index.html  sidebar.md
docs/api/: api_template.md
docs/api_test/: wave_matching_wave_matching_icp.hpp.md  wave_matching_wave_matching_matcher.hpp.md  wave_optimization_wave_optimization_ceres_ceres_examples.hpp.md  wave_utils_wave_utils_config.hpp.md  wave_utils_wave_utils_data.hpp.md  wave_utils_wave_utils_filesystem.hpp.md  wave_utils_wave_utils_logging.hpp.md  wave_utils_wave_utils_math.hpp.md  wave_utils_wave_utils_time.hpp.md  wave_utils_wave_wave_test.hpp.md
docs/examples/: example_config_parser.cpp  example_params.yaml
docs/ref/: factor_graphs.md  fundamentals.md  geometry_notation.md  goals_w17.md  open_source_evaluation.md  papers.md  reading.md  tutorials.md
wave_benchmark/: CMakeLists.txt
wave_benchmark/src/: testcase.cpp  trajectory_compare.cpp  trajectorycompare.cpp
wave_benchmark/tests/: testcase_test.cpp
wave_containers/: CMakeLists.txt
wave_containers/tests/: landmark_measurement_test.cpp  measurement_container_benchmark.cpp  measurement_test.cpp
wave_controls/: CMakeLists.txt
wave_controls/src/: pid.cpp
wave_controls/tests/: control_test.cpp  pid_test.cpp  test_runner.cpp
wave_estimation/: CMakeLists.txt
wave_estimation/src/: ekf.cpp  kf.cpp  pf.cpp
wave_estimation/tests/: ekf_test.cpp  kf_test.cpp
wave_geography/: CMakeLists.txt
wave_geography/src/: world_frame_conversions.cpp
wave_geometry/: CMakeLists.txt
wave_geometry/src/: rotation.cpp  transformation.cpp
wave_geometry/tests/: interpolated_transform_test.cpp  rotation_test.cpp  transformation_test.cpp
wave_geometry_og/: CMakeLists.txt
wave_geometry_og/tests/: interpolated_transform_test.cpp  transformation_test.cpp
wave_gtsam/: CMakeLists.txt
wave_gtsam/src/: decaying_bias.cpp  gps_factor_with_bias.cpp  hand_eye.cpp  localizer_state.cpp  motion_factor.cpp  pose_vel.cpp  pose_vel_bias.cpp  pose_vel_imubias.cpp  preint_imu_factor.cpp
wave_kinematics/: CMakeLists.txt
wave_kinematics/scripts/: gtest_install.sh
wave_kinematics/src/: constant_velocity_gp_prior.cpp  control.cpp  data.cpp  gimbal.cpp  pose.cpp  quadrotor.cpp  rotation.cpp  two_wheel.cpp  twowheel.cpp
wave_kinematics/tests/: gimbal_test.cpp  pose_test.cpp  quadrotor_test.cpp  rotation_test.cpp  two_wheel_test.cpp
wave_matching/: CMakeLists.txt
wave_matching/config/: ceres_config.lua  config.lua  corr_config.lua  fast_config.lua  g_icp.yaml  groundSegmentation.yaml  ground_segmentation.yaml  icp.yaml  ndt.yaml
wave_matching/src/: Correlation.cpp  G-ICP.cpp  ICP.cpp  NDT.cpp  ceres_matcher.cpp  correlation.cpp  fast_correlation.cpp  g_icp.cpp  gicp.cpp  groundSegmentation.cpp  ground_segmentation.cpp  icp.cpp  icp_pcl_functions.cpp  lpm_icp.cpp  multi_matcher.cpp  ndt.cpp  pointcloud_display.cpp  visualizer.cpp
wave_matching/tests/: cart_tests.cpp  ceres_tests.cpp  corr_tests.cpp  fast_corr_tests.cpp  gicp_tests.cpp  ground_seg_tests.cpp  ground_segmentation_test.cpp  icp_tests.cpp  lpm_icp_tests.cpp  multi_matcher_tests.cpp  ndt_tests.cpp  pointcloud_display_tests.cpp  test_runner.cpp
wave_odometry/: CMakeLists.txt
wave_odometry/include/: LaserOdom.hpp  PointXYZIR.hpp
wave_odometry/src/: LaserOdom.cpp  SIR_normals.cpp  feature_extractor.cpp  icosahedron_binner.cpp  integrals.cpp  laser_odom.cpp  line_fitter.cpp  loss_functions.cpp  odometry_callback.cpp  rigid_residual.cpp  se3_residuals.cpp  sensor_model.cpp  transformer.cpp  weighting_functions.cpp
wave_odometry/tests/: feature_definition.cpp  feature_extractor_tests.cpp  icosahedron_binner_test.cpp  kitti_evaluator.cpp  laserodom_tests.cpp  nn_benchmark.cpp  transformer_benchmark.cpp  transformer_tests.cpp
wave_optimization/: CMakeLists.txt
wave_optimization/include/: wave_matching_wave_matching_icp.hpp.md  wave_matching_wave_matching_matcher.hpp.md
wave_optimization/scripts/: ceres_install.sh  plot_3d_data.py
wave_optimization/src/: benchmark.cpp  testcase.cpp
wave_optimization/tests/: gtsam_offline_example.cpp  gtsam_offline_kitti_example.cpp  testcase_test.cpp
wave_quadrotor/: CMakeLists.txt
wave_quadrotor/src/: pid.cpp  quadrotor.cpp
wave_quadrotor/tests/: control_test.cpp  quadrotor_test.cpp
wave_utils/: CMakeLists.txt
wave_utils/scripts/: CMakeCache.txt  plot_matrix.py  yaml-cpp_install.sh
wave_utils/src/: angles.cpp  config.cpp  data.cpp  file.cpp  filesystem.cpp  math.cpp  pose_cov_comp.cpp  time.cpp  utils.cpp  world_frame_conversions.cpp
wave_utils/tests/: data_test.cpp  math_test.cpp  test_runner.cpp  utils_test.cpp
wave_vision/: CMakeLists.txt
wave_vision/config/: fast.yaml
wave_vision/scripts/: ffmpeg_ubuntu_1404_install.sh  opencv3_install.sh
wave_vision/src/: calibration.cpp  camera.cpp  chessboard.cpp  common.cpp  dataset.cpp  eight_point.cpp  fast.cpp  fast_detector.cpp  good.cpp  orb.cpp  sfm.cpp  utils.cpp  vo.cpp
wave_vision/tests/: calibration_test.cpp  camera_test.cpp  chessboard_test.cpp  common_tests.cpp  dataset_test.cpp  dataset_tests.cpp  eight_point_test.cpp  fast_tests.cpp  sfm_test.cpp  test_runner.cpp  utils_tests.cpp  vo_test.cpp
wave_vision/utils/: calibration.cpp  feature_demo.cpp  optical_flow.cpp  video_capture.cpp
wavelib_gimbal/: CMakeLists.txt
wavelib_gimbal/src/: sbgc.cpp
wavelib_gimbal/tests/: sbgc_test.cpp
wavelib_kinematics/: CMakeLists.txt
wavelib_kinematics/src/: quadrotor.cpp  twowheel.cpp
wavelib_optimization/: CMakeLists.txt
wavelib_optimization/scripts/: gtest_install.sh  plot_ransac_data.py  run.sh
wavelib_optimization/src/: benchmark.cpp  testcase.cpp
wavelib_optimization/tests/: testcase_test.cpp
wavelib_symmath/: CMakeLists.txt
wavelib_symmath/src/: models.cpp  symmath.cpp
wavelib_symmath/tests/: models_test.cpp  symmath_test.cpp
wavelib_utils/: CMakeLists.txt
wavelib_vision/: CMakeLists.txt
wavelib_viz/: CMakeLists.txt
(+1204 files in other folders)
