<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libwave</name>
  <version>0.1.1</version>
  <description>libwave</description>

  <author email="chutsu@gmail.com">Chris Choi</author>
  <author email="lkoppel@uwaterloo.ca">Leo Koppel</author>
  <maintainer email="michal.antkiewicz@uwaterloo.ca">Michal Antkiewicz</maintainer>
  <license>MIT</license>

  <!-- This file lets catkin build this non-catkin package-->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>
  <depend>libboost-dev</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
  <depend>geographiclib</depend>
  <test_depend>rosunit</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
