CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(wave_benchmark)

# DEPENDENCIES

# INCLUDES
INCLUDE_DIRECTORIES(include)

ADD_LIBRARY(${PROJECT_NAME} src/trajectory_compare.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    wave_utils
    wave_geometry
    Eigen3::Eigen)

# UNIT TESTS
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)

WAVE_ADD_TEST(
    ${PROJECT_NAME}_tests
    tests/benchmark/benchmark_tests.cpp
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_tests ${PROJECT_NAME})
