CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(wave_controls)

# SETTINGS
INCLUDE_DIRECTORIES(include)

# CONTROLS
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(
    wave_controls
    STATIC
    src/pid.cpp
)

TARGET_LINK_LIBRARIES(wave_controls Eigen3::Eigen)

# UNIT TESTS
WAVE_ADD_TEST(${PROJECT_NAME}_tests tests/pid_test.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_tests ${PROJECT_NAME})
