PROJECT(wave_geometry)

SET(CMAKE_CURRENT_SOURCE_DIR ${WAVE_GEOMETRY_SOURCE_DIR})

ADD_LIBRARY(Tick::Tick INTERFACE IMPORTED)
SET_PROPERTY(TARGET Tick::Tick PROPERTY
  INTERFACE_INCLUDE_DIRECTORIES "${WAVE_GEOMETRY_SOURCE_DIR}/3rd-party/Tick")

#WAVE_ADD_LIBRARY(wave_geometry)
#TARGET_COMPILE_OPTIONS(wave_geometry INTERFACE -Wall -Wextra)
#TARGET_LINK_LIBRARIES(wave_geometry INTERFACE Boost::boost Eigen3::Eigen Tick::Tick)
#WAVE_INCLUDE_DIRECTORIES(wave_geometry INTERFACE "include")

WAVE_ADD_MODULE(
    ${PROJECT_NAME}
    DEPENDS
    Boost::boost
    Eigen3::Eigen
    Tick::Tick)

# Unit tests
IF(BUILD_TESTING)
ENDIF(BUILD_TESTING)
